# flaude

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  plan.md
.github/workflows/: release.yml
app/: .env.development  index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  api.ts  i18n.ts  skills.ts  templates.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: gws_client_secret.json
app/src-tauri/sdk-runner/: agent-runner.ts  package-lock.json  package.json
app/src-tauri/src/: lib.rs  main.rs
docs/: meeting.md
landing/: index.html
prototype/: test_agent_runner.py
server/: .env.example  .gitignore  Procfile  railway.json  requirements.txt
server/agents/: api.py  consumers.py  dispatch.py  models.py  notifier.py  orchestrator.py  views.py
server/agents/migrations/: 0001_initial.py  0002_executionlog.py  0003_alter_agent_id_alter_agentteam_id_alter_client_id_and_more.py  0004_alter_agent_id_alter_agentteam_id_alter_client_id_and_more.py  0005_authtoken.py  0006_rename_team_to_workspace.py  0007_alter_workspace_created_by_and_more.py  0008_executionlog_team_run_id.py  0009_client_notification_channel_executionlog_client_and_more.py  0010_threadmessage.py  0011_alter_threadmessage_thread_id_and_more.py  0012_sdk_session_fields.py  0013_alter_agentteam_name_alter_agent_unique_together.py  0014_meeting_meetingagentresult_meetingtranscript.py  0015_team_name_unique_per_workspace.py
server/server/: asgi.py  settings.py  urls.py
(+4 files in other folders)
